--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -5,7 +5,7 @@
 
         <header>
             <section>
-                <h3>To-Do List </h3>
+                <h3>To-Do List App </h3>
                 <p>Schedule your daily activities</p>
             </section>
             <button class="btn" id="add-task-btn">Add Task</button>
@@ -49,6 +49,7 @@
                     <li><a href="https://github.com/astainy1"><span class="fa fa-github"></span></a></li>
                     <li><a href="https://www.facebook.com/christian.harris.58555"><span class="fa fa-facebook"></span></a></li>
                     <li><a href="mailto:astainyharris1@gmail.com"><span class="fa fa-google"></span></a></li>
+                    <Section><a href="/" style="text-decoration: none; color: #fff;">Home</a></Section>
                 </ul>
         </footer>
     </section>
@@ -72,6 +73,5 @@
         
     </section>
 </section>
-
 <!-- Include partial file for footer -->
 <%- include('./partial/footer.ejs') %>
